New Checks and Fixes
 - New checks for data and schema validation; Validation scripts are pretty verbose and make the P3 rmd file hard to read so put them into separate sql files and have them read in.
 - Fixed typos on R chunk headers

--- a/inst/rmd/P3.Rmd
+++ b/inst/rmd/P3.Rmd
@@ -81,7 +81,7 @@ Query Run Date:  `r Sys.Date()`
 
 ## Data Check 1.01: Required tables are not present
 
-```{r 1.01 echo = F, include=T, error=T}
+```{r 1.01, echo = F, include=T, error=T}
 # Table to check for quality
 tableCheckList <- c(lab_results,   encounters, prescribing,procedures  , social_history  , provider_specialty,diagnoses ,vital_signs  , census_location, demographics  , pro_surveys   ,  pro_questions ,pro_responses)
 
@@ -111,7 +111,7 @@ missingTableMessage <- if(length(missingTables)==0) {"All tables accounted for."
 
 ## Data Check 1.02: Required tables are not populated
 
-```{r 1.02 echo = F, include=T, error=T}
+```{r 1.02, echo = F, include=T, error=T}
 table_N_lst <- list() #vector(length=length(nonMissingDBTables))
 for(i in 1:length(nonMissingDBTables)){
   table_N_lst[[i]] <- run_query(paste("select distinct '_aaa_' as _aaa_, count(*) as tabN from ",nonMissingDBTables[i], sep=' '))#[,'tabN',drop=T]
@@ -132,13 +132,40 @@ nonPopMessage <- if(length(nonPopTables)==0) {"All tables populated, among those
 
 `r nonPopMessage`
 
+```{r 1.03 Data }
+sqlFiles <- system.file('sql', package='chordsTables')
+schema_validation_query <- read_file(dir(sqlFiles, "VDW_Schema_Validation.sql", f=TRUE))
 
+connection103 <- get_connection()
+
+schema_validation <- sqlQuery(connection103, schema_validation_query)
+
+odbcClose(connection103)
+
+```
 
 
 ## Data Check 1.03: Required fields are not present
+```{r 1.03 Output}
+
+missing_columnsTables <- select(schema_validation[schema_validation$Result == "TABLE OR COLUMN MISSING", ], "TableName", "ColumnName", "Result")
+
+knitr::kable(missing_columnsTables, row.names = FALSE)
+
+```
 
 
 ## Data Check 1.04: Required fields do not conform to data model specifications for data type, length, or name
+
+```{r 1.04 Output}
+
+config_mismatch <- schema_validation[schema_validation$Result == "CONFIG-MISMATCH", ]
+
+invalid_specs <- select(config_mismatch, c("TableName", "ColumnName", "ExpectedNumberPrecision", "FoundNumberPrecision", "ExpectedNumberScale", "FoundNumberScale", "ExpectedCharLength", "FoundCharLength", "ExpectedDatePrecision", "FoundDatePrecision"))
+
+knitr::kable(invalid_specs, row.names = FALSE, col.names = c("Table Name", "Column Name", "Expected Number Precision", "Found Number Precision", "Expected Number Scale", "Found Number Scale", "Expected Char Length", "Found Char Length", "Expected Date Precision", "Found Date Precision"))
+
+```
 
 
 ## Data Check 1.05: Tables have primary key definition errors
@@ -395,25 +422,66 @@ END Analysis Section
 
 ```{r 1.05 Data PrimaryKeyChecks Result}
 
-knitr::kable(primary_key_data)
+violated_primary_keys <- subset(primary_key_data, Key_Match_Result != "OK")
+
+knitr::kable(violated_primary_keys, row.names = FALSE)
 
 ```
 
 ## Data Check 1.06: Required fields contain values outside of data model specifications
+```{r 1.06 Data}
+sqlFiles <- system.file('sql', package='chordsTables')
+data_validation_query <- read_file(dir(sqlFiles, "VDW_DataValidation.sql", f=TRUE))
+
+connection106 <- get_connection()
+results <- sqlQuery(connection106, data_validation_query, as.is=TRUE)
+
+
+data_validation <- sqlQuery(connection106, "
+  SELECT
+       *
+  FROM
+     #CHORDSDataValueResults
+  ORDER BY TargetTable;
+  ", as.is = TRUE)
+
+ref_integrity <- sqlQuery(connection106, "
+  SELECT
+       *
+  FROM
+     #CHORDSReferentialIntegrityResults
+  ORDER BY TargetTable;
+  ", as.is = TRUE)
+
+odbcClose(connection106)
+
+```
 
 
 ## Data Check 1.07: Required fields have non-permissible missing values
+```{r 1.07, echo=F}
+nullable_mismatch = select(config_mismatch, c("TableName", "ColumnName", "ExpectedIsNullable", "FoundIsNullable"))
 
+FoundNullable <- subset(nullable_mismatch, ExpectedIsNullable != FoundIsNullable)
+knitr::kable(FoundNullable, row.names = FALSE, col.names = c("Table Name", "Column Name", "Expected IsNullable", "Found IsNullable"))
+```
 
 ## Data Check 1.08: Tables contain orphan PERSON_IDs 
+```{r 1.08, echo=F}
+orphan_person_ids <- subset(ref_integrity, TargetColumn == "PERSON_ID" | ReferenceColumn == "PERSON_ID")
+knitr::kable(orphan_person_ids, row.names = FALSE)
+```
 
 
 ## Data Check 1.09: Tables contain orphan ENCOUNTER_IDs 
-
+```{r 1.09, echo=F}
+orphan_enc_ids <- subset(ref_integrity, TargetColumn == "ENC_ID" | ReferenceColumn == "ENC_ID")
+knitr::kable(orphan_enc_ids, row.names = FALSE)
+```
 
 ## Data Check 1.10: Replication errors between the ENCOUNTER, PROCEDURES and DIAGNOSIS tables 
 
-```{r 1.10 echo = F, include=T, error=T}
+```{r 1.10, echo = F, include=T, error=T}
 
 repErrors <- run_query(
                       paste0(
@@ -452,7 +520,7 @@ knitr::kable(subset(repErrors_tx, select=c(tablename, nrows, field, NP_bad)),
 ## Data Check 1.11: More than 5% of encounters are assigned to more than one patient 
 
 
-```{r 1.11 echo = F, include=T, error=T}
+```{r 1.11, echo = F, include=T, error=T}
 
 GR1Person <- run_query(
                       paste0(
@@ -491,13 +559,308 @@ encItoManyMsg <- if(GR1Person$pct>5){
 
 ## Data Check 1.12: Tables contain orphan PROVIDER_IDs
 
+```{r 1.12, echo=F}
+orphan_provider_ids <- subset(ref_integrity, TargetColumn %in% c("RXMD", "PROVIDER") | ReferenceColumn %in% c("RXMD", "PROVIDER"))
+knitr::kable(orphan_provider_ids, row.names = FALSE)
+```
+
 
 ## Data Check 1.13: More than 5% of ICD, CPT, LOINC, RXCUI, or NDC codes do not conform to the expected length or content
+```{r 1.13, include=T, error=T}
+connection113 <- get_connection()
+code_conform_table_counts <- sqlQuery(connection113, paste0("
+ /*
+ - DIAGNOSES:
+		*ICD09:length is not between 3-5 OR has alpha characters other than 
+		 E or V OR has no numeric characters OR first 3 digits (min length) are 0;
+		*ICD10: length is not between 3 and 7 OR 1st character is not alpha OR 
+		 first 3 digits (min length) are 0 or 9 OR has no numeric characters;
+ - PROCEDURES:
+		*CPT/HCPCS are length <5 OR first 5 are all 0 or 9 OR no numeric;
+		*ICD9 is not length 3 or 4 OR any alpha OR all 0;
+		*ICD10 is not length 7 OR no numeric OR all 7 are 0s or 9s;
+ - PRESCRIBING:
+		*flag codes with any alphabetical characters OR a length <2 or >7;
+ - PHARMACY:
+		*length not 11 OR any alpha OR a string of 0 or 9;
+ - LAB_RESULT
+		*flag for any alphabetical characters OR a length less than 3 or greater 
+		 than 7 OR the absence of a dash after the next to last position;
+*/
+SET NOCOUNT ON;
+DROP TABLE IF EXISTS 
+     #VdwInvalidCodes;
 
+SELECT        
+       *
+INTO 
+     #VdwInvalidCodes
+FROM              
+(
+    SELECT    
+           a.TableName, 
+           a.CodeType, 
+           a.Code, 
+           a.ValidResult
+    FROM          
+    (
+        SELECT 
+               'DIAGNOSES' AS TableName, 
+               DX AS Code, 
+               DX_CODETYPE AS CodeType,
+               CASE
+                   WHEN LEN(replace(DX, '.', '')) NOT BETWEEN 3 AND 7
+                   THEN 'Code Length must be between 3 and 7 characters (excluding \".\")'
+                   WHEN DX NOT LIKE '[A-TV-Z]%'
+                   THEN 'Starting character must be a letter and not \"U\"'
+                   WHEN SUBSTRING(DX, 1, 3) IN('000', '999')
+                   THEN 'Invalid Numeric Value Range'
+                   WHEN DX NOT LIKE '%[0-9]%'
+                   THEN 'Values must include a numerical component'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM ",    
+             diagnoses, "
+        WHERE   DX_CODETYPE = '10'
+        UNION ALL
+        SELECT 
+               'DIAGNOSES' AS TableName, 
+               DX AS Code, 
+               DX_CODETYPE AS CodeType,
+               CASE
+                   WHEN LEN(replace(DX, '.', '')) NOT BETWEEN 3 AND 5
+                   THEN 'Length must be between 3 and 5 characters (excluding \".\")'
+                   WHEN(DX NOT LIKE '[EV]%'
+                        AND DX NOT LIKE '[0-9]%')
+                   THEN 'Starting Character must be \"E\", \"V\", or a number'
+                   WHEN SUBSTRING(DX, 1, 3) IN('000')
+                   THEN 'Invalid Numeric Value Range'
+                   WHEN DX NOT LIKE '%[0-9]%'
+                   THEN 'Numeric Values Not Detected'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM  ",   
+             diagnoses, "
+        WHERE   DX_CODETYPE = '09'
+        UNION ALL
+        SELECT 
+               'PROCEDURES' AS TableName, 
+               PX AS Code, 
+               PX_CODETYPE AS CodeType,
+               CASE
+                   WHEN LEN(PX) < 5
+                   THEN 'Code length must be less than 5 characters'
+                   WHEN SUBSTRING(PX, 1, 5) IN('00000', '99999')
+                   THEN 'Invalid Numeric Value'
+                   WHEN TRY_PARSE(PX AS INT) IS NULL
+                   THEN 'Non-numeric Characters Detected'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM  ",   
+             procedures, "
+        WHERE   PX_CODETYPE = 'C4'
+        UNION ALL
+        SELECT 
+               'PROCEDURES' AS TableName, 
+               PX AS Code, 
+               PX_CODETYPE AS CodeType,
+               CASE
+                   WHEN LEN(replace(PX, '.', '')) NOT BETWEEN 3 AND 4
+                   THEN 'Code length must be between 3 and 4 characters'
+                   WHEN PX NOT LIKE '[0-9]%'
+                   THEN 'Invalid Start Character'
+                   WHEN PX IN('00000')
+                   THEN 'Invalid Numeric Value'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM  ",
+             procedures, "
+        WHERE   PX_CODETYPE = '09'
+        UNION ALL
+        SELECT 
+               'PROCEDURES' AS TableName, 
+               PX AS Code, 
+               PX_CODETYPE AS CodeType,
+               CASE
+                   WHEN LEN(PX) != 7
+                   THEN 'Code Length Must Equal 7'
+                   WHEN PX NOT LIKE '%[0-9]%'
+                   THEN 'Code values must include a numerical component'
+                   WHEN PX IN('0000000', '9999999')
+                   THEN 'Invalid Numeric Value'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM  ",   
+             procedures,"
+        WHERE   PX_CODETYPE = '10'
+        UNION ALL
+        SELECT 
+               'PRESCRIBING' AS TableName, 
+               RXNORM AS Code, 
+               'RXNORM' AS CodeType,
+               CASE
+                   WHEN RXNORM LIKE '%[A-Z]%'
+                   THEN 'Code cannot contain alphabetical characters'
+                   WHEN LEN(RXNORM) NOT BETWEEN 2 AND 7
+                   THEN 'Code length must be between 2 and 7 characters'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM  ",   
+             prescribing, "
+        UNION ALL
+        SELECT 
+               'PHARMACY' AS TableName, 
+               NDC AS Code, 
+               'NDC' AS CodeType,
+               CASE
+                   WHEN NDC LIKE '%[A-Z]%'
+                   THEN 'Code cannot contain alphabetical characters'
+                   WHEN LEN(NDC) != 11
+                   THEN 'Code length must be 11 characters'
+                   WHEN NDC IN('00000000000', '99999999999')
+                   THEN 'Invalid Numeric Value'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM  ",   
+             pharmacy, "
+        UNION ALL
+        SELECT 
+               'LAB_RESULTS' AS TableName, 
+               LOINC AS Code, 
+               'LOINC' AS CodeType,
+               CASE
+                   WHEN LOINC LIKE '%[A-Z]%'
+                   THEN 'Code cannot contain alphabetical characters'
+                   WHEN LEN(LOINC) NOT BETWEEN 3 AND 7
+                   THEN 'Code length must be between 2 and 7 characters'
+                   WHEN SUBSTRING(LEFT(REVERSE(RTRIM(LTRIM(LOINC))), 2), 2, 2) != '-'
+                   THEN 'No hyphen character in the second to last position'
+                   ELSE 'OK'
+               END AS ValidResult
+        FROM ",  
+             lab_results, "
+    ) a
+    WHERE a.validResult != 'OK'
+) InvalidCodes;
+
+WITH CTE_CodeCounts
+     AS (SELECT 
+                'DIAGNOSES' AS TableName, 
+                DX_CODETYPE AS CodeType, 
+                COUNT(1) CountAll
+         FROM ",    
+              diagnoses, "
+         GROUP BY 
+                  DX_CODETYPE
+         UNION ALL
+         SELECT 
+                'PROCEDURES' AS TableName, 
+                PX_CodeType AS CodeType, 
+                COUNT(1) CountAll
+         FROM ",    
+              procedures, " 
+         GROUP BY 
+                  PX_CodeType
+         UNION ALL
+         SELECT 
+                'PRESCRIBING' AS TableName, 
+                'RXNORM' AS CodeType, 
+                COUNT(1) CountAll
+         FROM ",    
+              prescribing, "
+         UNION ALL
+         SELECT 
+                'PHARMACY' AS TableName, 
+                'NDC' AS CodeType, 
+                COUNT(1) CountAll
+         FROM ",    
+              pharmacy, "
+         UNION ALL
+         SELECT 
+                'LAB_RESULTS' AS TableName, 
+                'LOINC' AS CodeType, 
+                COUNT(1) CountAll
+         FROM ",   
+              lab_results, "
+	)
+     SELECT 
+            b.TableName, 
+            b.CodeType, 
+            cc.CountAll, 
+            b.CountInvalid AS CountInvalid, 
+            CAST(b.CountInvalid AS DECIMAL) / CAST(cc.CountAll AS DECIMAL) * CAST(100.0 AS DECIMAL)
+            AS PercentInvalid
+     FROM       
+     (
+         SELECT 
+                z.TableName, 
+                z.CodeType, 
+                COUNT(1) AS CountInvalid
+         FROM   
+              #VdwInvalidCodes z
+         GROUP BY 
+                  z.TableName, 
+                  z.CodeType
+     ) b
+     JOIN CTE_CodeCounts cc
+          ON cc.TableName = b.TableName
+             AND cc.CodeType = b.CodeType
+     ORDER BY 
+              b.TableName, 
+              b.CodeType;
+"))
+
+top_50_invalid <- sqlQuery(connection113, "
+SELECT 
+		TableName, 
+        CodeType, 
+        Code, 
+        ValidResult, 
+		CountInvalid
+FROM       
+(
+    SELECT 
+           TableName, 
+           CodeType, 
+           Code, 
+           ValidResult, 
+		   CountInvalid, 
+           ROW_NUMBER() OVER(PARTITION BY TableName
+           ORDER BY 
+                    CountInvalid DESC) RowNum
+    FROM       
+    (
+        SELECT 
+               z.TableName, 
+               z.CodeType, 
+               z.Code, 
+               z.ValidResult, 
+               COUNT(1) AS CountInvalid
+        FROM   
+             #VdwInvalidCodes z
+        GROUP BY 
+                 z.TableName, 
+                 z.CodeType, 
+                 z.Code, 
+                 z.ValidResult
+    ) InvalidCount
+) Top50
+WHERE  RowNum <= 50
+ORDER BY TableName,  CountInvalid Desc, CodeType;
+")
+
+odbcClose(connection113)
+
+knitr::kable(code_conform_table_counts, row.names = FALSE)
+```
+
+```{r 1.13 Top 50 Invalid COdes, echo=F }
+knitr::kable(top_50_invalid, row.names = FALSE ,caption = "Top 50 Invalid Codes")
+```
 
 ## Data Check 2.01: More than 5% of records have future dates
 
-```{r 2.01 echo = F, include=T, error=T}
+```{r 2.01, echo = F, include=T, error=T}
 # DC 2.01
 tabDates <- run_query('select distinct a.name as tabname, b.name as colname from sys.tables as a inner join sys.columns as b on a.object_id = b.object_id order by a.name') %>% 
   subset(grepl('date',colname, ignore.case = T))
@@ -541,7 +904,7 @@ futureDataMsg <- if(nrow(subset(fdatesdone, pctFuture>=5))>0 & params$QAAlert==F
 ## Data Check 2.02: More than 10% of records fall into the lowest or highest categories of age, height, weight, diastolic
 ## blood pressure, systolic blood pressure, or dispensed days supply
 
-```{r 2.02 echo = F, include=T, error=T}
+```{r 2.02, echo = F, include=T, error=T}
 # select count(*) as personCount, sum(case when (minage not between 0 and 89) or (maxage not between 0 and 89) then 1 else 0 end ) as N_outOfRange
 
 patAgeRange <- run_query(paste0("
@@ -645,7 +1008,7 @@ outOfRangeMsg <- if(nrow(subset(allOutOfRange, (N_low+N_high)/nrows>=0.1))>0 & p
 
 ## Data Check 2.03: More than 5% of patients have illogical date relationships
 
-```{r 2.03 echo = F, include=T, error=T}
+```{r 2.03, echo = F, include=T, error=T}
 
 encTabBirth2.03 <- run_query(paste0("
  select sum(dobPostAdate) as dobPostAdate,
@@ -893,7 +1256,7 @@ illogicalDatesMsg <- if(nrow(subset(table2.03_tx, pct>=5))>0 & params$QAAlert==F
 
 ## Data Check 3.03: More than 10% of records have missing or unknown values for the following fields:
 
-```{r 3.03 echo=F}
+```{r 3.03, echo=F}
 
 # to implement a new check add a new row to the following table:
 # table = the standard name of the table in the database (it will automaticaly correct for you if the actual table names are not standard)
@@ -957,7 +1320,7 @@ check3.03Msg <- if(nrow(subset(result3.03, pctBad>=10))>0 & params$QAAlert==F){
 
 
 ## Data Check 3.05: Less than 50% of patients with encounters have PROCEDURES records 
-```{r 3.05 echo = F, include=T, error=T}
+```{r 3.05, echo = F, include=T, error=T}
 
 patsWithEncs <- run_query(paste0("select count(*) as nrows, sum(patsWEncDiag) as patsWEncDiag, sum(patsWEncProc) as patsWEncProc from ( select  case when person_id in (select person_id from ", diagnoses, ") then 1 else 0 end as patsWEncDiag",
  ",case when person_id in (select person_id from ", procedures, ") then 1 else 0 end as patsWEncProc",
@@ -993,12 +1356,39 @@ knitr::kable(
 ```
 
 
-## Data Check 3.06: More than 10% of IP (inpatient) or ED to inpatient (EI) encounters with any diagnosis don't have a principal
-## diagnosis
+## Data Check 3.06: More than 10% of IP (inpatient) or ED to inpatient (EI) encounters with any diagnosis don't have a principal diagnosis
 
+```{r 3.06 }
+ipedei_no_principal_diag <- run_query(paste0("SELECT        
+       InpatientEnc, 
+       InpatientEnc - InpatientEncWPrincipalDiag AS InpatientEncWOPrincipalDiag, 
+       ROUND(1.0 - CAST(InpatientEncWPrincipalDiag AS FLOAT) / CAST(InpatientEnc AS FLOAT), 4) *
+       100.0 AS InpatientEncWOPrincipalDiagPcnt
+FROM              
+(
+    SELECT    
+           COUNT(e.ENC_ID) AS InpatientEnc, 
+           SUM(IIF(d.ENC_ID IS NOT NULL, 1, 0)) AS InpatientEncWPrincipalDiag
+    FROM ",     
+         encounters ," e
+         LEFT JOIN
+    (
+        SELECT DISTINCT 
+               ENC_ID
+        FROM  ", 
+             diagnoses, " d
+        WHERE  d.PRINCIPAL_DX = 'P'
+               AND d.DX_ORIGIN != 'PR'
+    ) d
+              ON d.ENC_ID = e.ENC_ID
+    WHERE e.ENCTYPE IN('IP', 'EI')
+) PxDiags;"))
 
-## Data Check 3.07: Encounters, diagnoses, or procedures in an ambulatory (AV), emergency department (ED), ED to inpatient
-## (EI), or inpatient (IP) setting are less than 75% complete three months prior to the current month
+knitr::kable(ipedei_no_principal_diag, row.names = FALSE)
+```
+
+## Data Check 3.07: Encounters, diagnoses, or procedures in an ambulatory (AV), emergency department (ED), ED to inpatient (EI), or inpatient (IP) setting are less than 75% complete three months prior to the current month
+
 ```{r 3.07 Data, include=FALSE, error=FALSE}
 
 benchmark_start <- run_query(paste0("
@@ -1029,10 +1419,10 @@ data_result <- run_query(str_replace_all(paste0("
   );
   
   SELECT 
-         FORMAT(ADATE, 'MM-MMM') MONTHNUM, 
+         FORMAT(ADATE, 'MM-MMM') Month, 
          @BenchmarkPriorYearAvg AS BenchMarkCount, 
          COUNT(1) PriorMonthCount, 
-         ROUND(CAST(COUNT(1) AS FLOAT) / @BenchmarkPriorYearAvg * 100.0, 2) AS PercentOfBenchMark
+         ROUND(CAST(COUNT(1) AS FLOAT) / @BenchmarkPriorYearAvg * 100.0, 2) AS PercentofBenchMark
   FROM ",  
        encounters, " e
   WHERE  e.ENCTYPE IN('IP', 'AV', 'ED', 'EI')
@@ -1047,7 +1437,7 @@ data_result <- run_query(str_replace_all(paste0("
 
 ```{r 3.07 Output, error=FALSE, include=TRUE}
 
-knitr::kable(data_result)
+knitr::kable(data_result,row.names = FALSE)
 
 ```
 
