--- a/inst/rmd/P3.Rmd
+++ b/inst/rmd/P3.Rmd
@@ -791,7 +791,7 @@ WITH CTE_CodeCounts
             b.CodeType, 
             cc.CountAll, 
             b.CountInvalid AS CountInvalid, 
-            CAST(b.CountInvalid AS DECIMAL) / CAST(cc.CountAll AS DECIMAL) * CAST(100.0 AS DECIMAL)
+            ROUND(CAST(b.CountInvalid AS DECIMAL) / CAST(cc.CountAll AS DECIMAL) * CAST(100.0 AS DECIMAL), 2)
             AS PercentInvalid
      FROM       
      (
@@ -816,9 +816,9 @@ WITH CTE_CodeCounts
 top_50_invalid <- sqlQuery(connection113, "
 SELECT 
 		TableName, 
-        CodeType, 
-        Code, 
-        ValidResult, 
+    CodeType, 
+    Code, 
+    ValidResult, 
 		CountInvalid
 FROM       
 (
@@ -854,12 +854,13 @@ ORDER BY TableName,  CountInvalid Desc, CodeType;
 
 odbcClose(connection113)
 
-knitr::kable(code_conform_table_counts, row.names = FALSE, col.names =c("Table Name", "Code Type", "Count All", "Count Invalid", "Percent Invalid"))
+knitr::kable(code_conform_table_counts, row.names = FALSE, col.names =c("Table Name", "Code Type", "Count All", "Count Invalid", "% Invalid"))
 
 ```
 \newline
 ```{r 1.13 Top 50 Invalid COdes, echo=F }
-knitr::kable(top_50_invalid, row.names = FALSE ,caption = "Top 50 Invalid Codes", col.names = c("Table Name", "Code Type", "Code", "Valid Result", "Count Invalid"))
+cat("Top 50 Invalid Codes")
+knitr::kable(top_50_invalid, row.names = FALSE, col.names = c("Table Name", "Code Type", "Code", "Valid Result", "Count Invalid"))
 ```
 
 ## Data Check 2.01: More than 5% of records have future dates
@@ -1366,8 +1367,8 @@ knitr::kable(
 ipedei_no_principal_diag <- run_query(paste0("SELECT        
        InpatientEnc, 
        InpatientEnc - InpatientEncWPrincipalDiag AS InpatientEncWOPrincipalDiag, 
-       ROUND((1.0 - CAST(InpatientEncWPrincipalDiag AS FLOAT) / CAST(InpatientEnc AS FLOAT)), 4) *
-       100.0 AS InpatientEncWOPrincipalDiagPcnt
+       CAST(ROUND((1.0 - CAST(InpatientEncWPrincipalDiag AS FLOAT) / CAST(InpatientEnc AS FLOAT)) *
+       100.0, 2) as DECIMAL(5,2)) AS InpatientEncWOPrincipalDiagPcnt
 FROM              
 (
     SELECT    
@@ -1388,7 +1389,7 @@ FROM
     WHERE e.ENCTYPE IN('IP', 'EI')
 ) PxDiags;"))
 
-knitr::kable(ipedei_no_principal_diag, row.names = FALSE, col.names = c("In-Patient Type Encounters", "In-Patient Encounters Without Principal Diagnoses", "Percentage of In-Patient Type Encounters Without Principal Diagnoses"))
+knitr::kable(ipedei_no_principal_diag, row.names = FALSE, col.names = c("In-Patient Type Encounters", "In-Patient Encounters W/O Principal Diagnoses", "% of In-Patient Type Encounters W/O Principal Diagnoses"))
 ```
 
 ## Data Check 3.07: Encounters, diagnoses, or procedures in an ambulatory (AV), emergency department (ED), ED to inpatient (EI), or inpatient (IP) setting are less than 75% complete three months prior to the current month
@@ -1426,7 +1427,7 @@ data_result <- run_query(str_replace_all(paste0("
          FORMAT(ADATE, 'MM-MMM') Month, 
          @BenchmarkPriorYearAvg AS BenchmarkCount, 
          COUNT(1) PriorMonthCount, 
-         ROUND((CAST(COUNT(1) AS FLOAT) / @BenchmarkPriorYearAvg * 100.0), 2)  AS PercentofBenchMark
+         CAST(ROUND((CAST(COUNT(1) AS FLOAT) / @BenchmarkPriorYearAvg * 100.0), 2) as DECIMAL(5,2))  AS PercentofBenchMark
   FROM ",  
        encounters, " e
   WHERE  e.ENCTYPE IN('IP', 'AV', 'ED', 'EI')
@@ -1443,7 +1444,7 @@ data_result <- run_query(str_replace_all(paste0("
 
 ```{r 3.07 Output, error=FALSE, include=TRUE}
 cat(paste0('Benchmark Start Date: ', benchmark_start[1,1]))
-knitr::kable(data_result,row.names = FALSE, col.names = c("Month", "Benchnmark Count", "Prior Month Count", "Percent of Benchmark"))
+knitr::kable(data_result,row.names = FALSE, col.names = c("Month", "Benchnmark Count", "Prior Month Count", "% of Benchmark"))
 
 ```
 
